<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.PrevioudBids">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardCornerRadius="20dp"
        android:layout_marginTop="25dp"
        card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.25"
                android:textColor="@color/colorPrimary"/>


            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayTime"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0.75"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.25"
                android:textColor="@color/colorPrimary"/>


            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayTime"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0.75"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.25"
                android:textColor="@color/colorPrimary"/>


            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayTime"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0.75"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.25"
                android:textColor="@color/colorPrimary"/>


            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayTime"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0.75"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.25"
                android:textColor="@color/colorPrimary"/>


            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayTime"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0.75"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.25"
                android:textColor="@color/colorPrimary"/>


            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayTime"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0.75"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.25"
                android:textColor="@color/colorPrimary"/>


            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayTime"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0.75"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>